src/client/styles/settings.scss
@import 'variables.scss';

.settings-page{
  @media all and (min-width: 1200px) {
    padding: 64px;
  }
}

.settings-tabs-container{
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  padding-top: 60px;
  @media all and (min-width:1200px){
    padding-top: 0;
  }
  .settings-main-tabs{
    display: flex;
    width: 100%;
    background-color: #FFF;
    box-shadow: rgba(0, 0, 0, 0.0784314) 0px 2px 30px 0px;
    .settings-tabs-menu{
      width: 100%;
      padding: 0;
      margin: 0;
      list-style: none;
      display: flex;
      justify-content: center;
      align-items: center;
      .settings-tabs-menu-element{
        .settings-tabs-menu-anchor{
          display: block;
          padding: 1em 1.5em;
          font-size: 18px;
          border-bottom: 1px solid transparent;
          transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
          @media (max-width: 425px) {
            padding: 0.3em;
            text-align: center;
          }
          &:hover{
            color: $black;
            border-bottom: 1px solid $black;
          }
        }
        .active{
          border-bottom: 1px solid $black;
        }
      }
    }
  }
}

.settings-main-content{
  min-width: 600px;
  @media (max-width: 425px) {
    max-width: 425px;
    min-width: 0;
  }
  .settings-single-tab-content{
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    flex-direction: column;
    padding: 1em;
    .settings-section-title-container{
      .settings-section-title{
        font-size: 28px;
        font-weight: 600;
        text-align: left;
      }
    }
    .profile-editor-section-container{
      display: flex;
      justify-content: flex-start;
      align-items: center;
      flex-direction: column;
      margin-bottom: 1em;
      width: 100%;
      @media (max-width: 425px) {
        justify-content: center;
      }
      .profile-editor-section-title{
        font-size: 22px;
        font-weight: 600;
        text-align: left;
        width: 100%;
      }
      .settings-section-subtitle{
        font-size: 18px;
        width: 100%;
        color: $light-med-grey;
        text-align: left;
      }
    }
    .profile-photo-actions-container{
      display: flex;
      justify-content: flex-start;
      align-items: flex-start;
      flex-direction: row;
      align-self: flex-start;
      @media (max-width: 425px) {
        align-self: center;
      }
      .dropzone-settings-page{
        display: flex;
        @media (max-width: 425px){
          flex-direction: column;
          text-align: center;
          align-items: center;
        }
        .profile-photo-editor-figure{
          width: 100%;
          max-width: 200px;
          margin-right: 1em;
          @media (max-width: 425px){
            padding-bottom: 20px;
          }
          img{
            width: 100%;
            border-radius: 5px;
          }
        }
        .profile-photo-upload-btn{
          background-color: rgb(0, 66, 214);
          border: 1px solid rgb(0, 66, 214);
          color: rgb(255, 255, 255);
          border-radius: 25px;
          font-size: 16px;
          padding: 15px 30px;
          height: 55px;
        }
        .background-photo-editor-figure{
          max-width: 400px;
          margin-right: 1em;
          @media (max-width: 425px) {
            padding-bottom: 20px;
          }
          img{
            width: 100%;
            border-radius: 5px;
          }
        }
      }
    }
    .profile-editor-genres-container{
      display: flex;
      justify-content: flex-start;
      align-items: flex-start;
      width: 100%;
      flex-direction: column;
      @media (max-width: 425px) {
        justify-content: center;
        align-items: center;
      }
      .profile-editor-mapped-genres-container{
        display: flex;
        justify-content: space-around;
        align-items: center;
        flex-wrap: wrap;
        max-width: 600px;
        @media (max-width: 425px) {
          flex-direction: column;
        }
        .profile-editor-single-genre{
          display: flex;
          border: solid 1px $blue;
          border-radius: 35px;
          padding: 1em 1.5em;
          margin: .25em;
        }
      }
      .profile-editor-add-genres{
        margin-top: 1em;
        display: block;
      }
    }
    .profile-edidor-quote-container{
      display: flex;
      justify-content: flex-start;
      align-items: flex-start;
      flex-direction: column;
      width: 100%;
      .profile-editor-favorite-quotes-num{
        font-size: 18px;
        font-weight: 600;
        color: $black;
        text-align: left;
        width: 100%;
        text-transform: capitalize;
      }
      .profile-editor-favorite-quote-textarea{
        width: 100%;
        padding: .8em;
        resize: vertical;
        height: 55px;
        max-height: 135px;
        font-size: 16px;
        line-height: inherit;
        @media (max-width: 425px) {
          height: 75px;
        }
      }
    }
    .editor-favorite-socialmedia-container{
      display: flex;
      justify-content: flex-start;
      align-items: flex-start;
      flex-direction: column;
      width: 100%;
      .profile-editor-save-btn-container{
        align-self: center;
        text-align: center;
        margin-top: 1em;
      }
    }
    .profile-editor-form-container{
      width: 100%;
      .profile-editor-form{
        width: 100%;
      }
    }
    .shipping-form-container{
      width: 100%;
      margin-bottom: 2em;
      padding: 1em 0;
    }
    .settings-setion-toggle-container{
      width: 100%;
      margin-bottom: 2em;
      padding: 1em 0;
    }
    .profile-editor-action-container{
      display: flex;
      justify-content: flex-start;
      align-items: center;
      width: 100%;
      margin-top: 1em;
      @media (max-width: 425px) {
        justify-content: center;
      }
      .profile-editor-section-main-action{
        display: flex;
        padding: 1em 1.5em;
        border: solid 1px $blue;
        border-radius: 35px;
      }
    }
    .profile-editor-save-btn-container{
      @media (max-width: 425px) {
        align-self: center;
      }
    }
  }
}

.profile-editor-form-input{
  border-radius: 5px;
  height: auto;
  padding: 1em;
}

.social-accounts-container{
  width: 100%;
  .social-accounts-single-container{
    padding: 1em 0;
  }
}

.social-account-container{
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
  padding: .5em;
  .social-account-figure{
    width: 50px;
    .social-account-img{
      width: 100%;
      border-radius: 3px;
    }
  }
  .social-account-details{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: row;
    margin: 0 1em;
  }
}

.social-accounts-reg-anchor{
  font-size: 14px;
}

.import-library-modal{
  .import-library-content{
    padding-top: 10px !important;
    .import-library-container{
      display: flex;
      flex-direction: column;
      align-items: center;
      @media(min-width: 768px) {
        flex-direction: row;
      }
      .upload{
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-bottom: 30px;
        @media(min-width: 768px) {
          margin: 0 auto;
        }
        .upload-title{
          margin-bottom: 1em;
        }
        .upload-library{
          .upload-library-dropzone{
            background-color: #4669b1;
            border: 1px solid #4669b1;
            border-radius: 25px;
            font-size: 16px;
            padding: 5px 30px;
            text-align: center;
            vertical-align: middle;
            &:hover{
              background-color: white;
              .upload-library-btn{
                color: #4669b1;  
              }
            }
            .upload-library-btn{
              color: white;  
            }
          }
        }
      }
      .help{
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-bottom: 20px;
        @media(min-width: 768px) {
          margin: 0 auto;
        }
      }
    }
    .results{
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 40px;
        .display-results{
          margin-top: 5px;
          table-layout: fixed;
          border-collapse: collapse;
          @media (max-width: 425px) {
            display: none;
          }
          tr:hover{
            background-color: #f5f5f5;
            td{
              overflow: hidden;
              text-overflow: ellipsis;
            }
          }
          .title-heading{
            width: 50%;
          }
          .success{
            background-color: #99ff99;
          }
          .failed{
            background-color: #ffb3b3;
          }
          .exists{
            background-color: #ffffb3;
          }
        }
        .display-results-mobile{
          display: none;
          margin-top: 5px;
          table-layout: fixed;
          border-collapse: collapse;
          @media (max-width: 425px) {
            display: block;
          }
          th{
            width: 25%;
          }
          td{
            overflow: hidden;
            text-overflow: ellipsis;
          }
          .title-heading{
            width: 50%;
          }
          .success{
            background-color: #99ff99;
          }
          .failed{
            background-color: #ffb3b3;
          }
          .exists{
            background-color: #ffffb3;
          }
        }
      }
  }
}

.info-link{
  &:before {
    content: '';
    display: block;
    background: url(../image/info.svg) no-repeat;
    width: 40px;
    height: 30px;
    float: left;
    margin: 0 8px 0 0;
    @media(min-width: 768px) {
      width: 25px;
      margin: 0 6px 0 0;
    }
  }
}

.backspace-link{
  padding-bottom: 30px;
  &:before{
    content: '';
    cursor: pointer;
    display: block;
    background: url(../image/backspace.svg) no-repeat;
    width: 30px;
    height: 30px;
    float: left;
    margin: 0 6px 0 0;
  }
}

.shipping-address-error{
  color: #ff0000;
  input{
    border-color: #ff0000;
  }
}

